--- a/_notebooks/ElasticSearch.ipynb
+++ b/_notebooks/ElasticSearch.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# \"ElasticSearch - Create and Delete operations in Python\"\n",
-    "> \"ElasticSearch and Python Implementation for CRD operations\"\n",
+    "> \"ElasticSearch and Python Implementation for CRD operation\"\n",
     "\n",
-    "- toc:true- branch: master\n",
+    "- toc: true\n",
+    "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- author: Rakshit Sakhuja\n",
-    "- categories: [ElasticSearch,Python, jupyter]"
+    "- categories: [elasticsearch]"
    ]
   },
   {
